--- a/Body.html
+++ b/Body.html
@@ -261,7 +261,7 @@
 
   <div class="scrollElement"></div>
 
-  <a href="https://codepen.io/nothing4us/pens/public" target="_blank" class="btn btn_works">My Works</a>
+  <a href="https://github.com/Len4u" target="_blank" class="btn btn_works">My Works</a>
   <button class="btn" id="fullscr">Go Fullscreen</button>
   <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>
