--- a/Body.html
+++ b/Body.html
@@ -264,9 +264,9 @@
   <a href="https://github.com/Len4u" target="_blank" class="btn btn_works">My Works</a>
   <button class="btn" id="fullscr">Go Fullscreen</button>
   <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/ScrollTrigger.min.js'></script>
-  <script src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js'></script>
+  <script src="script.js"></script>
 
 </body>
 
