--- a/scene1.html
+++ b/scene1.html
@@ -265,8 +265,8 @@
   <button class="btn" id="fullscr">Go Fullscreen</button>
   <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js'></script>
-  <script src="script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js'></script>
+  <script src="./script.js"></script>
 
 </body>
 
