--- a/Body.html
+++ b/Body.html
@@ -266,7 +266,7 @@
   <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js'></script>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 
 </body>
 
